--- a/STM32_Accelerometer/STM32_Accelerometer.ioc
+++ b/STM32_Accelerometer/STM32_Accelerometer.ioc
@@ -77,6 +77,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0-WKUP.GPIO_Label=B1 [Blue PushButton]
@@ -322,8 +323,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=AccDriver.ioc
-ProjectManager.ProjectName=AccDriver
+ProjectManager.ProjectFileName=STM32_Accelerometer.ioc
+ProjectManager.ProjectName=STM32_Accelerometer
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
